# prep-2022-01

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  memtest.sh
.github/workflow/: ci.yml
.github/workflows/: ci.yml
btests/: run.sh  transaction.dat.gold
project/include/: blackRecord.h  black_record.h  case2.h  case3.h  case4.h  file_reader.h  main_module.h  masterWrite.h  master_write.h  matrix.h  parser.h  test_module.h  transactionWrite.h  transaction_write.h  update_data.h  utils.h
project/src/: blackRecord.c  black_record.c  case2.c  case3.c  case4.c  file_reader.c  main.c  masterWrite.c  master_write.c  matrix.c  parser.c  test_module.c  transactionWrite.c  transaction_write.c  update_data.c  utils.c
project/test/: Makefile  main_test.c  run.sh
project/test/src/: main_test.c
project/tests/src/: main.c
src/: list.hpp
test/: test.cpp
